<?xml version="1.0" encoding="iso-8859-1"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
  <PreferenceCategory
    android:title="@string/prefcat_display">
    <EditTextPreference
      android:key="font_size"
      android:title="@string/pref_font_size"
    />
    <ListPreference
      android:key="font_type"
      android:title="@string/pref_font_type"
      android:entries="@array/ar_font_type"
      android:entryValues="@array/ar_font_type" 
    />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/prefcat_system">
    <CheckBoxPreference
      android:key="log_output"
      android:title="@string/pref_log_output"
      android:summary="/sdcard/.JavaIDEdroid/LogOutput.txt"
    />
    <EditTextPreference
      android:key="devroot_dir"
      android:title="@string/pref_devroot_dir"
      android:summary="@string/prefsum_devroot_dir"
    />
    <ListPreference
      android:key="log_level"
      android:title="@string/pref_log_level"
      android:summary="@string/prefsum_log_level"
      android:entries="@array/ar_log_level"
      android:entryValues="@array/ar_log_level"
    />
  </PreferenceCategory>
  <PreferenceCategory
    android:title="@string/prefcat_global_vars">
    <EditTextPreference
      android:key="android_jar_path"
      android:title="@string/pref_android_jar_path"
      android:summary="G.oSet.stAndroidJarPath"
    />
    <EditTextPreference
      android:key="bsh_var1"
      android:title="@string/pref_bsh_var1"
      android:summary="G.oSet.stBshVar1"
    />
    <EditTextPreference
      android:key="bsh_var2"
      android:title="@string/pref_bsh_var2"
      android:summary="G.oSet.stBshVar2"
    />
    <EditTextPreference
      android:key="bsh_var3"
      android:title="@string/pref_bsh_var3"
      android:summary="G.oSet.stBshVar3"
    />
    <EditTextPreference
      android:key="bsh_var4"
      android:title="@string/pref_bsh_var4"
      android:summary="G.oSet.stBshVar4"
    />
    <EditTextPreference
      android:key="bsh_var5"
      android:title="@string/pref_bsh_var5"
      android:summary="G.oSet.stBshVar5"
    />
  </PreferenceCategory>
</PreferenceScreen>
