<?xml version="1.0" encoding="iso-8859-1"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
>
  <TextView
    android:text="@string/lbl_temp_pw"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
  />
  <TextView
    android:text="@string/lbl_pw1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
  />
  <EditText 
    android:id="@+id/et_pw1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:password="true"
   />
   <TextView
    android:text="@string/lbl_pw2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
  />
  <EditText 
    android:id="@+id/et_pw2"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:password="true"
   />
</LinearLayout>

